Fix alignment for related pages

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -21,6 +21,10 @@
   padding-top: 1rem;
 }
 
+.post-related {
+  padding-top: 1rem;
+}
+
 .index-excerpt {
   padding-top: 1rem;
 }
